--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -8,14 +8,15 @@ nav#mainNav.navbar.navbar-dark.bg-dark.sticky-top
       a.nav-link(href='/viewer') Alarms
       a.nav-link(href='/subscriptions') Subscriptions
 
-      a.dropdown-toggle(href='#', data-toggle='dropdown', role='button', aria-expanded='false')
-        | Dropdown 
-        span.caret
-      ul.dropdown-menu(role='menu')
-        li
-          a(href='#') Action
-        li
-          a(href='#') Another action
+      div.nav-link.dropdown
+        a.nav-link.dropdown-toggle(href='#', id="navbarDropdown", data-bs-toggle="dropdown", role='button', aria-expanded='false')
+          | Heartbeats
+          span.caret
+        ul.dropdown-menu(aria-labelledby="navbarDropdown")
+          li.dropdown-item
+            a(href='#') View
+          li.dropdown-item
+            a(href='#') Subscriptions
 
 
   nav.nav.navbar-right
