--- a/views/navigation.pug
+++ b/views/navigation.pug
@@ -8,15 +8,15 @@ nav#mainNav.navbar.navbar-dark.bg-dark.sticky-top
       a.nav-link(href='/viewer') Alarms
       a.nav-link(href='/subscriptions') Subscriptions
 
-      div.nav-link.dropdown
-        a.nav-link.dropdown-toggle(href='#', id="navbarDropdown", data-bs-toggle="dropdown", role='button', aria-expanded='false')
-          | Heartbeats
-          span.caret
-        ul.dropdown-menu(aria-labelledby="navbarDropdown")
-          li.dropdown-item
-            a(href='#') View
-          li.dropdown-item
-            a(href='#') Subscriptions
+      //- div.nav-link.dropdown -//
+      a.nav-link.dropdown-toggle(href='#', id="navbarDropdown", data-bs-toggle="dropdown", role='button', aria-expanded='false')
+        | Heartbeats
+        span.caret
+      ul.dropdown-menu(aria-labelledby="navbarDropdown")
+        li
+          a.nav-link(href='#') View
+        li
+          a.nav-link(href='#') Subscriptions
 
 
   nav.nav.navbar-right
