--- a/views/heartbeats_subscriptions.pug
+++ b/views/heartbeats_subscriptions.pug
@@ -4,6 +4,8 @@ block content
     .container
         .row
             .col-lg-5.mx-auto
+                h2 Alarms
+                div(id="AlarmsJSTree")
                 h2 Heartbeats
                 div(id="SimpleJSTree")
 
@@ -110,7 +112,7 @@ block extra_scripts
         //console.log('rendered categories data',catdata);
         //console.log('test jstree data',treedata);
 
-        $('#SimpleJSTree').jstree({
+        $('#SimpleJSTree  #AlarmsJSTree').jstree({
             core: {
                 themes: {
                     variant: "large",
@@ -120,7 +122,10 @@ block extra_scripts
             },    
             plugins: ["checkbox"]
         });
-        $('#SimpleJSTree').on("changed.jstree", function (e, data) {
+
+        $('#SimpleJSTree #AlarmsJSTree').jstree('close_all');
+
+        $('#SimpleJSTree #AlarmsJSTree').on("changed.jstree", function (e, data) {
             var cn=data.node;
             //- console.log('changed:',cn);
             if (cn===undefined){return;}
@@ -179,7 +184,7 @@ block extra_scripts
             st.clear().rows.add(nd).draw();
         });
 
-        $('#SimpleJSTree').bind("hover_node.jstree", function(e, data) {
+        $('#SimpleJSTree #AlarmsJSTree').bind("hover_node.jstree", function(e, data) {
             //- console.log('data', data);
             if (data.node.children.length === 0) {
                 //- $('#description').innerHTML=data.node.data;
