--- a/views/subscriptions.pug
+++ b/views/subscriptions.pug
@@ -178,7 +178,7 @@ block extra_scripts
                 data: treedata
             },    
             plugins: ["checkbox"]
-        });
+        }).close_all();
         
         $('#HeartbeatsJSTree').jstree({
             core: {
@@ -189,10 +189,7 @@ block extra_scripts
                 data: hartData
             },    
             plugins: ["checkbox"]
-        });
-
-        $('#SimpleJSTree').jstree('close_all',-1);
-        $('#HeartbeatsJSTree').jstree('close_all',-1);
+        }).close_all();
 
         $('#SimpleJSTree').on("changed.jstree", function (e, data) {
             var cn=data.node;
