--- a/views/subscriptions.pug
+++ b/views/subscriptions.pug
@@ -327,16 +327,17 @@ block extra_scripts
 
         $("#SimpleJSTree").bind('ready.jstree', function(event, data) {
         var $tree = $(this);
-        $($tree.jstree().get_json($tree, {
-            flat: true
-        }))
-        .each(function(index, value) {
-            var node = $("#SimpleJSTree").jstree().get_node(this.id);
-            var lvl = node.parents.length;
-            if (lvl = 1) {
-            node.close_node(this, true);
-            }    
-        });
+        $tree.jstree().close_all();
+        //- $($tree.jstree().get_json($tree, {
+        //-     flat: true
+        //- }))
+        //- .each(function(index, value) {
+        //-     var node = $("#SimpleJSTree").jstree().get_node(this.id).clo
+        //-     var lvl = node.parents.length;
+        //-     if (lvl = 1) {
+        //-     node.close_node(this, true);
+        //-     }    
+        //- });
         });
 
         $('#dtButton').click((event) => {
