--- a/views/heartbeats_viewer.pug
+++ b/views/heartbeats_viewer.pug
@@ -4,7 +4,7 @@ block content
     .container 
         .row
             .col-lg-12
-                //- h2 Alarm Viewer
+                //- h2 Heartbeats Viewer
                 div#cascade.form-group.row
                     .col-lg-4
                         label.form-label(for='step1') Category
@@ -18,10 +18,10 @@ block content
 
                 //- refresh interval refreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2C
                 //- iframe(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/2066f290-b80f-11eb-89e4-591876ef80c0?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-7d%2Cto%3Anow))" height="200" width="800" frameBorder="0")
-                iframe#alarmsInTime(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/d67271c0-28dd-11eb-8f92-953711258120?embed=true&_g=(time%3A(from%3Anow-7d%2Cto%3Anow))")
+                iframe#heartbeatsInTime(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/59e2a060-c6fe-11ec-9b57-bf21ae80f105?embed=true&_g=(time%3A(from%3Anow-7d%2Cto%3Anow))")
                 //-  height="600" width="1000" frameBorder="0" allowfullscreen="true"
             p.lead 
-            table#alarms_table.display(style='width:100%')
+            table#heartbeats_table.display(style='width:100%')
 
 block extra_scripts
     script.
@@ -43,14 +43,14 @@ block extra_scripts
 
         function updateForm(cat, subcat, event){
             var src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#"
-            src+="/edit/d67271c0-28dd-11eb-8f92-953711258120?embed=true&_g=(time%3A(from%3Anow-7d%2Cto%3Anow))"
+            src+="/edit/59e2a060-c6fe-11ec-9b57-bf21ae80f105?embed=true&_g=(time%3A(from%3Anow-7d%2Cto%3Anow))"
             src+="&_a=(query%3A(language%3Akuery%2Cquery%3A%27"
             src+="category%3A%22"+cat+"%22"
             src+="%20AND%20subcategory%3A%22"+subcat+"%22"
             src+="%20AND%20event%3A%22"+event+"%22"
             src+="%27))"
             console.log("src:"+src);
-            $('#alarmsInTime').attr('src', src);
+            $('#heartbeatsInTime').attr('src', src);
         }
 
         function createCascade(){
@@ -59,7 +59,7 @@ block extra_scripts
                     {
                         selector: '#step1',
                         source: function(request, response) {
-                            $.getJSON('/alarm/categories', request, function(data) {
+                            $.getJSON('/heartbeat/', request, function(data) {
                                 var first=true;
                                 var uniqueCategories=[];
                                 var seen=[];
@@ -83,7 +83,7 @@ block extra_scripts
                         selector: '#step2',
                         requires: ['#step1'],
                         source: function(request, response) {
-                            $.getJSON('/alarm/categories', request, function(data) {
+                            $.getJSON('/heartbeat/', request, function(data) {
                                 var first=true;
                                 var uniqueSubCategories=[];
                                 var seen=[];
@@ -111,7 +111,7 @@ block extra_scripts
                         requires: ['#step1', '#step2'],
                         requireAll: true,
                         source: function(request, response) {
-                            $.getJSON('/alarm/categories', request, function(data) {
+                            $.getJSON('/heartbeat/', request, function(data) {
                                 var first=true;
                                 var uniqueEvents=[];
                                 $.each(data, function(index,item){
@@ -150,12 +150,12 @@ block extra_scripts
         }
 
         function createTable() {
-            table = $('#alarms_table').DataTable({
+            table = $('#heartbeats_table').DataTable({
                 paging: true,
                 searching: true,
                 ajax:{
                     type: 'POST',
-                    url: '/alarm/fetch',
+                    url: '/heartbeat/fetch',
                     contentType: 'application/json',
                     data: function ( d ) {
                         return JSON.stringify({
