--- a/views/docs.pug
+++ b/views/docs.pug
@@ -345,7 +345,7 @@ block content
                                     "category" : "",
                                     "subcategory": "",
                                     "event": "",
-                                    "tag":"",
+                                    "tag":["",""],
                                     "body":"",
                                     "source": {"xxx": "", "yyy": "", ...}
                                 }
