--- a/views/viewer.pug
+++ b/views/viewer.pug
@@ -18,7 +18,9 @@ block content
 
                 //- refresh interval refreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2C
                 //- iframe(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/2066f290-b80f-11eb-89e4-591876ef80c0?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-7d%2Cto%3Anow))" height="200" width="800" frameBorder="0")
-                iframe#alarmsInTime(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/d67271c0-28dd-11eb-8f92-953711258120?embed=true&_g=(time%3A(from%3Anow-7d%2Cto%3Anow))")
+                //- iframe#alarmsInTime(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/d67271c0-28dd-11eb-8f92-953711258120?embed=true&_g=(time%3A(from%3Anow-7d%2Cto%3Anow))")
+                iframe#alarmsInTime(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/7fe2406a-a989-5b0f-bdb1-7d90421f8b1c?embed=true&_g=(time%3A(from%3Anow-7d%2Cto%3Anow))")
+                
                 //-  height="600" width="1000" frameBorder="0" allowfullscreen="true"
             p.lead 
             table#alarms_table.display(style='width:100%')
