--- a/views/heartbeats_viewer.pug
+++ b/views/heartbeats_viewer.pug
@@ -17,8 +17,8 @@ block content
                         select#step3.form-control(name="event") 
 
                 //- refresh interval refreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2C
-                //- iframe(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/2066f290-b80f-11eb-89e4-591876ef80c0?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-7d%2Cto%3Anow))" height="200" width="800" frameBorder="0")
-                iframe#heartbeatsInTime(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/59e2a060-c6fe-11ec-9b57-bf21ae80f105?embed=true&_g=(time%3A(from%3Anow-7d%2Cto%3Anow))")
+                //-<iframe src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/c27d2e3e-de00-5750-bc38-6375909a45da?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-7d%2Fd%2Cto%3Anow))" height="600" width="800"></iframe>
+                iframe#heartbeatsInTime(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/c27d2e3e-de00-5750-bc38-6375909a45da?embed=true&_g=(time%3A(from%3Anow-7d%2Cto%3Anow))")
                 //-  height="600" width="1000" frameBorder="0" allowfullscreen="true"
             p.lead 
             table#heartbeats_table.display(style='width:100%')
@@ -43,7 +43,7 @@ block extra_scripts
 
         function updateForm(cat, subcat, event){
             var src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#"
-            src+="/edit/59e2a060-c6fe-11ec-9b57-bf21ae80f105?embed=true&_g=(time%3A(from%3Anow-7d%2Cto%3Anow))"
+            src+="/edit/c27d2e3e-de00-5750-bc38-6375909a45da?embed=true&_g=(time%3A(from%3Anow-7d%2Cto%3Anow))"
             src+="&_a=(query%3A(language%3Akuery%2Cquery%3A%27"
             src+="category%3A%22"+cat+"%22"
             src+="%20AND%20subcategory%3A%22"+subcat+"%22"
