--- a/views/head.pug
+++ b/views/head.pug
@@ -1,6 +1,7 @@
 head
     title Alarm And Alert Service
     meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
+    meta(http-equiv='Content-Security-Policy' content="default-src 'self' *.atlas-ml.org")
     meta(charset='UTF-8')
     meta(name='google', content='notranslate')
     meta(http-equiv='Content-Language', content='en')
