--- a/views/viewer.pug
+++ b/views/viewer.pug
@@ -25,7 +25,7 @@ block content
             table#alarms_table.display(style='width:100%')
 
 block extra_scripts
-    script(type='text/javascript', src='../static/js/viewer.js')
+    script(src='js/viewer.js')
     //- script.
         //- const queryString = window.location.search;
         //- console.log('query string:',queryString);
