--- a/views/head.pug
+++ b/views/head.pug
@@ -1,7 +1,7 @@
 head
     title Alarm And Alert Service
     meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
-    meta(http-equiv='Content-Security-Policy' content="default-src 'self' *.atlas-ml.org; script-src 'self' *.jsdelivr.net cdnjs.cloudflare.com cdn.datatables.net; frame-src *.mtw2.org; style-src 'unsafe-inline'";)
+    meta(http-equiv='Content-Security-Policy' content="default-src 'self' *.atlas-ml.org; script-src 'self'; style-src cdnjs.cloudflare.com cdn.datatables.net *.jsdelivr.net 'unsafe-inline'; frame-src *.mtw2.org")
     meta(charset='UTF-8')
     meta(name='google', content='notranslate')
     meta(http-equiv='Content-Language', content='en')
