--- a/views/head.pug
+++ b/views/head.pug
@@ -1,7 +1,7 @@
 head
     title Alarm And Alert Service
     meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
-    meta(http-equiv='Content-Security-Policy' content="default-src 'self' *.atlas-ml.org; script-src 'self' 'unsafe-inline'; script-src-elem cdnjs.cloudflare.com cdn.datatables.net *.jsdelivr.net; style-src cdnjs.cloudflare.com cdn.datatables.net *.jsdelivr.net 'unsafe-inline'; frame-src *.mwt2.org*")
+    meta(http-equiv='Content-Security-Policy' content="default-src 'self' *.atlas-ml.org; script-src 'self' 'unsafe-inline'; script-src-elem 'self' cdnjs.cloudflare.com cdn.datatables.net *.jsdelivr.net; style-src cdnjs.cloudflare.com cdn.datatables.net *.jsdelivr.net 'unsafe-inline'; frame-src *.mwt2.org:5601/")
     meta(charset='UTF-8')
     meta(name='google', content='notranslate')
     meta(http-equiv='Content-Language', content='en')
