update search to es 8

--- a/views/subscriptions.pug
+++ b/views/subscriptions.pug
@@ -73,7 +73,7 @@ block extra_scripts
         hartData = [];
 
         for (let i=0; i<catdata.length; i++) {
-            console.log(i, catdata[i]);
+            //- console.log(i, catdata[i]);
             treedata.push({
                 "id":catdata[i].category.replaceAll(' ', '_'),
                 "parent":"#",
