--- a/views/viewer.pug
+++ b/views/viewer.pug
@@ -18,7 +18,7 @@ block content
 
                 //- refresh interval refreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2C
                 //- iframe(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/visualize?auth_provider_hint=anonymous1#/edit/2066f290-b80f-11eb-89e4-591876ef80c0?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-7d%2Cto%3Anow))" height="200" width="800" frameBorder="0")
-                iframe#alarmsInTime(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/dashboards?auth_provider_hint=anonymous1#/view/f3055010-2af1-11ed-afcf-d91dad577662?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-7d%2Cto%3Anow))&show-time-filter=true&hide-filter-bar=true" height="1000" frameBorder="0")
+                iframe#alarmsInTime(src="https://atlas-kibana.mwt2.org:5601/s/aaas/app/dashboards?auth_provider_hint=anonymous1#/view/f3055010-2af1-11ed-afcf-d91dad577662?embed=true&_g=(filters%3A!()%2CrefreshInterval%3A(pause%3A!t%2Cvalue%3A0)%2Ctime%3A(from%3Anow-7d%2Cto%3Anow))&show-time-filter=true&hide-filter-bar=true")
                 //-  height="600" width="1000" frameBorder="0" allowfullscreen="true"
             //- p.lead 
             //- table#alarms_table.display(style='width:100%')
